--- a/Avance_Xhtml/Inicio.xhtml
+++ b/Avance_Xhtml/Inicio.xhtml
@@ -5,27 +5,21 @@
 	xmlns:f="http://java.sun.com/jsf/core"
   xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui">
-<style type="text/css">
-body {  
-        background-image:url('imagen5.jpg');
-		background-repeat: no-repeat;
-		background-position: down;
-		background-size: 1880px 1010px;
-	}
-h1 	{
-		font-size: 3rem;
-	}
-</style>
+
 <head>
+<link rel="stylesheet" type="text/css" href="estilos.css" media="screen" />
 <title>Inicio</title>
 </head>
 <body>
-<h1 align="center" color="blue"> PAGINA DE INICIO A LA PLATAFORMA DE INICIATIVAS </h1>
-<img src="imagen3.jpg" align="down" height="150" width="350" border="2" style="position:absolute;top:850px;left:5px;" />
-Usuario 
-<input type="text" name="Usuario" value="" />
-Contraseña 
-<input type="password" name="contrasena" value="" />
-<br/>
+	<h1 align="center" color="blue"> PAGINA DE INICIO A LA PLATAFORMA DE INICIATIVAS </h1>
+	<img src="imagen3.jpg" align="down" height="150" width="350" border="2" 		 style="position:absolute;top:850px;left:5px;" />
+	<form action="">
+		<h2>Formulario de Login</h2>
+		<input type="text" placeholder="&#128272; Usuario" name="usuario"  />
+		
+		<input type="password" placeholder="&#128272; Contraseña" name="contrasena"  />
+		<input type="submit" value="Ingresar"/>
+	</form>
+	<br/>
 </body>
 </html>
