--- a/src/main/webapp/Prueba.xhtml
+++ b/src/main/webapp/Prueba.xhtml
@@ -12,7 +12,7 @@
 <h:form id="cliente_form">
 	<h1>Registro Usuario</h1>
 	<br><p:inputText id="nombre" value="correo"> correo </p:inputText></br>
-	<br><p:inputText id="nombre" value="cont"> cont </p:inputText></br>
+	<br><p:inputText id="contrasena" value="cont"> cont </p:inputText></br>
 	
 	<p:button outcome="Prueba2" value="Registro" />
 	
