--- a/src/main/webapp/Registro.xhtml
+++ b/src/main/webapp/Registro.xhtml
@@ -3,29 +3,24 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
-  xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui">
 
-<head>
-<link rel="stylesheet" type="text/css" href="Recursos\estilos.css" media="screen" />
-<title>Registro</title>
-</head>
-<body>
-	<div id="Titulo"> 
-		<h1>PAGINA DE REGISTRO A LA PLATAFORMA DE INICIATIVAS </h1>
-	</div>
-	<img src="Recursos\imagen3.jpg" align="down" height="150" width="350" border="2" style="position:absolute;top:84%;left:0.5%;" />
-	<form>
-		<div id="Login"> 
-			<h2> REGISTRO </h2>
-		</div>
-		<input type="text" placeholder="Carné" name="id"  />
-		<input type="text" placeholder="Nombre" name="nombre" />
-		<input type="text" placeholder="Correo" name="email" />
-		<input type="password" placeholder="&#128272; Contraseña" name="contrasena"  />
-		<input type="submit" value="Registrarse" />
-		<button outcome="Inicio" value="Registrarse" />
-	</form>
-	<br/>
-</body>
+    <h:head>
+        <title>Registrar</title>
+        <link rel="stylesheet" type="text/css" href="Recursos\estilos.css" media="screen" />
+    </h:head>
+    <h:body>
+        
+        <h:form id="hyj">
+                <h1>Registro Usuario</h1>
+                <br><p:inputText id="carnet"  placeholder="&#49;&#50;&#51; Carnet" > </p:inputText></br>
+                <br><p:inputText id="nombre" placeholder="&#128100; Nombre" > </p:inputText></br>
+                <br><p:inputText id="correo" placeholder="&#128386; Correo" > </p:inputText></br>
+                <br><p:inputText id="contrasena" placeholder="&#128272; Contraseña" type="password"> </p:inputText></br>
+                <br><p:inputText id="ConfirmacionContrasena" placeholder="&#128272; Confirmacion Contraseña" type="password"> </p:inputText></br>
+                <p:button outcome="Inicio" value="Inicio" />
+                <p:button value="Registrarse" />
+
+        </h:form>
+    </h:body>
 </html>
