Verificacion de login y registro- Nontoa,Corredor

--- a/src/main/webapp/Registro.xhtml
+++ b/src/main/webapp/Registro.xhtml
@@ -11,15 +11,14 @@
     </h:head>
     <h:body>
         
-        <h:form id="hyj">
+        <h:form id="form_registro">
                 <h1>Registro Usuario</h1>
-                <br><p:inputText id="carnet"  placeholder="&#49;&#50;&#51; Carnet" > </p:inputText></br>
-                <br><p:inputText id="nombre" placeholder="&#128100; Nombre" > </p:inputText></br>
-                <br><p:inputText id="correo" placeholder="&#128386; Correo" > </p:inputText></br>
-                <br><p:inputText id="contrasena" placeholder="&#128272; Contraseña" type="password"> </p:inputText></br>
-                <br><p:inputText id="ConfirmacionContrasena" placeholder="&#128272; Confirmacion Contraseña" type="password"> </p:inputText></br>
+                <br><p:inputText id="carne"  placeholder="&#49;&#50;&#51; Carnet" value="#{registroBean.id}"> </p:inputText></br>
+                <br><p:inputText id="nombre" placeholder="&#128100; Nombre" value="#{registroBean.nombre}"> </p:inputText></br>
+                <br><p:inputText id="correo" placeholder="&#128386; Correo" value="#{registroBean.email}" > </p:inputText></br>
+                <br><p:inputText id="contrasena" placeholder="&#128272; Contraseña" type="password" value="#{registroBean.contrasena}"> </p:inputText></br>
                 <p:button outcome="Inicio" value="Inicio" />
-                <p:button value="Registrarse" />
+                <p:commandButton value="Registrarse" actionListener="#{registroBean.registrarUsuario(registroBean.id,registroBean.nombre,registroBean.email,registroBean.contrasena)}" action="Inicio" />
 
         </h:form>
     </h:body>
