--- a/src/main/webapp/Inicio.xhtml
+++ b/src/main/webapp/Inicio.xhtml
@@ -15,10 +15,10 @@
         </div>
         <h:form id="cliente_form"> 
             <h1>Login</h1>
-            <br><p:inputText id="correo" placeholder="&#128386; Correo" >  </p:inputText></br>
-            <br><p:inputText id="contrasena"  placeholder="&#128272; Contraseña" type="password">  </p:inputText></br>
-            <p:button  value="login" />
-            <p:button outcome="Registro.xhtml" value="Registrarse" />
+            <br><p:inputText id="correo" placeholder="&#128386; Correo" value="#{inicioBean.email}" >  </p:inputText></br>
+            <br><p:inputText id="contrasena"  placeholder="&#128272; Contraseña" type="password" value="#{inicioBean.id}" > </p:inputText></br>
+            <p:commandButton  value="login" actionListener="#{inicioBean.consultar(inicioBean.email)}" />
+            <p:button outcome="Registro.xhtml" value="Registrarse" />   
 
         </h:form>
     </h:body>
