conexion a base de datos funciona

--- a/src/main/webapp/Inicio.xhtml
+++ b/src/main/webapp/Inicio.xhtml
@@ -21,7 +21,7 @@
 				<br><p:inputText id="correo" placeholder="&#128386; Correo" value="#{inicioBean.email}" > </p:inputText></br>
 			</div>
 			<div id="Cuadro_pass">
-				<br><p:inputText id="contrasena"  placeholder="&#128272; Contraseña" type="password" value="#{inicioBean.id}" > </p:inputText></br>
+				<br><p:inputText id="contrasena"  placeholder="&#128272; Contraseña" type="password" value="#{inicioBean.contrasena}" > </p:inputText></br>
 			</div>
 			<div id="Botones">
 				<p:commandButton  value="login" actionListener="#{inicioBean.consultar(inicioBean.email)}" />
