--- a/src/main/webapp/usuarios.xhtml
+++ b/src/main/webapp/usuarios.xhtml
@@ -23,9 +23,15 @@
                         <a href="">Inicio</a>
                         <a href="">Iniciativas</a>
                         <a href="">Contacto</a>
+                        <a href="">#{inicioBean.usuario.nombre} (#{inicioBean.usuario.rol})</a>
                     </nav>
                 </div>
             </header>
+
+            <p:commandButton  value="Usuarios del sistema" action= "usuarios"/>
+
+
 	</h:body>
 	
 </html>
+
