--- a/src/main/webapp/homeAdmi.xhtml
+++ b/src/main/webapp/homeAdmi.xhtml
@@ -33,7 +33,7 @@
                     <nav class="menu2">
                          <a href="consultarUsuarios.xhtml">Consultar Usuarios del sistema</a>
                          <a href="">Consultar Iniciativas</a>
-                         <a href="prueba.xhtml">Cerrar Sesion</a>
+                         <a href="Inicio.xhtml">Cerrar Sesion</a>
                          
                     </nav>
                 </div>
