--- a/src/main/webapp/Inicio.xhtml
+++ b/src/main/webapp/Inicio.xhtml
@@ -7,39 +7,20 @@
 
     <h:head>
         <title>Inicio</title>
-        <link rel="stylesheet" href="fontello.css" />
-        <link rel="stylesheet" href="Recursos/estilosP.css" />
-        <link rel="stylesheet" href="Recursos/login.css" />
+		<link rel="stylesheet" href="fontello.css" />
+                <link rel="stylesheet" href="Recursos/estilosP.css" />
     </h:head>
-    <h:body style="overflow-x:hidden; overflow-y:hidden">
-        <div id="imagenU">
-            <img src="Recursos\imagen3.png"  border="2" />
-        </div>
-		<h2>INICIAR SESION</h2>
-        <h:form id="cliente_form"> 
-            <div id="Cuadro_email">
-                    <br><p:inputText id="correo" placeholder="&#128386; Correo" value="#{inicioBean.email}" > </p:inputText></br>
-            </div>
-            <div id="Cuadro_pass">
-                    <br><p:inputText id="contrasena"  placeholder="&#128272; Contraseña" type="password" value="#{inicioBean.contrasena}" > </p:inputText></br>
-            </div>
-            <div id="Botones">
-                    <p:commandButton  value="login" actionListener="#{inicioBean.consultar(inicioBean.email)}"  action= "#{inicioBean.irHome(inicioBean.email)}"/>
-                    <p:button outcome="Registro.xhtml" value="Registrarse" />   
-            </div>
-        </h:form>
+    <h:body >
         <header>
             <div class="contenedor"> 
-                <h1 class="icon-bank">banco de iniciativas</h1>
+                <h1 class="icon-bank"> Banco de iniciativas de proyectos</h1>
                 <input type="checkbox" id="menu-bar"></input>
                 <label class="icon-menu" for="menu-bar"></label> 
                 <nav class="menu">
-                    <a href="home.xhtml">Home</a>
-                    <a href="Inicio.xhtml" >Iniciar sesion</a>
-                    <a href="Registro.xhtml" >Registrarse</a>
+                    <a href="inicioSesion.xhtml">Iniciar Sesion</a>
+                    <a href="Registro.xhtml">Registrarse</a>
                     <a href="">Iniciativas</a>
                     <a href="">Contacto</a>
-                    
                 </nav>
             </div>
         </header>
