--- a/src/main/webapp/homeP.xhtml
+++ b/src/main/webapp/homeP.xhtml
@@ -33,7 +33,7 @@
                     <nav class="menu2">
                    
                          <a href="">Consultar Iniciativas</a>
-                         <a href="">Nueva Iniciativa</a>
+                         <a href="RegistrarIniciativa.xhtml">Nueva Iniciativa</a>
                          <a href="prueba.xhtml">Cerrar Sesion</a>
                     </nav>
                 </div>
