--- a/src/main/webapp/Registro.xhtml
+++ b/src/main/webapp/Registro.xhtml
@@ -33,7 +33,7 @@
                 <input type="checkbox" id="menu-bar"></input>
                 <label class="icon-menu" for="menu-bar"></label> 
                 <nav class="menu">
-                    <a href="inicio.xhtml">Inicio</a>
+                    <a href="Inicio.xhtml">Inicio</a>
                     <a href="inicioSesion.xhtml" >Iniciar sesion</a>
                     <a href="">Iniciativas</a>
                     <a href="">Contacto</a>
