--- a/src/main/webapp/inicioSesion.xhtml
+++ b/src/main/webapp/inicioSesion.xhtml
@@ -35,7 +35,7 @@
                 <input type="checkbox" id="menu-bar"></input>
                 <label class="icon-menu" for="menu-bar"></label> 
                 <nav class="menu">
-                    <a href="inicio.xhtml">Inicio</a>
+                    <a href="Inicio.xhtml">Inicio</a>
                     <a href="Registro.xhtml" >Registrarse</a>
                     <a href="">Iniciativas</a>
                     <a href="">Contacto</a>
