--- a/src/main/webapp/homeP.xhtml
+++ b/src/main/webapp/homeP.xhtml
@@ -33,8 +33,8 @@
                     <nav class="menu2">
                    
                          <a href="">Consultar Iniciativas</a>
-                         <a href="RegistrarIniciativa.xhtml">Nueva Iniciativa</a>
-                         <a href="prueba.xhtml">Cerrar Sesion</a>
+                         <a href="RegistrarIniciativa.xhtml?usuarioId=#{inicioBean.usuario.id}">Nueva Iniciativa</a>
+                         <a href="Inicio.xhtml">Cerrar Sesion</a>
                     </nav>
                 </div>
 
