Correccion Xhtml,CSS

--- a/src/main/webapp/Inicio.xhtml
+++ b/src/main/webapp/Inicio.xhtml
@@ -9,8 +9,12 @@
         <title>Inicio</title>
 		<link rel="stylesheet" href="fontello.css" />
                 <link rel="stylesheet" href="Recursos/estilosP.css" />
+                <link rel="stylesheet" href="Recursos/login.css" />
     </h:head>
-    <h:body >
+    <h:body style="overflow-x:hidden; overflow-y:hidden">
+        <div id="imagenU">
+            <img src="Recursos\imagen3.png"  border="2" />
+        </div>
         <header>
             <div class="contenedor"> 
                 <h1 class="icon-bank"> Banco de iniciativas de proyectos</h1>
