--- a/src/main/webapp/inicioSesion.xhtml
+++ b/src/main/webapp/inicioSesion.xhtml
@@ -13,7 +13,7 @@
     </h:head>
     <h:body style="overflow-x:hidden; overflow-y:hidden"> 
         <div id="imagenLog">
-            <img src="Recursos\login.png" />
+            <img src="Recursos\login.png" width="20%" height="20%" />
         </div>
         <div id="imagenU">
             <img src="Recursos\imagen3.png"  border="2" />
