--- a/src/main/webapp/inicioSesion.xhtml
+++ b/src/main/webapp/inicioSesion.xhtml
@@ -37,7 +37,7 @@
                 <nav class="menu">
                     <a href="Inicio.xhtml">Inicio</a>
                     <a href="Registro.xhtml" >Registrarse</a>
-                    <a href="">Iniciativas</a>
+                    <a href="VerIniciativas.xhtml">Iniciativas</a>
                     <a href="">Contacto</a>
                     
                 </nav>
