--- a/src/main/webapp/VerIniciativas.xhtml
+++ b/src/main/webapp/VerIniciativas.xhtml
@@ -15,15 +15,32 @@
         <div id="imagenU">
             <img src="Recursos\imagen3.png"  border="2" />
         </div>
+        <h:form id="iniciativaForm">
+            <p:dataTable id="iniciativa_tabla" var="iniciativa" value="#{iniciativaBean.iniciativas}">
+		<p:column headerText="Descripcion">
+                    <h:outputText value="#{iniciativa.descripcion}" />
+		</p:column>
+		<p:column headerText="Estado">
+                    <h:outputText value="#{iniciativa.estado}" />
+		</p:column>
+		<p:column headerText="Fecha_Creacion">
+                    <h:outputText value="#{iniciativa.fechaCreacion}" />
+		</p:column>
+		<p:column headerText="Area">
+                    <h:outputText value="#{iniciativa.area}" />
+		</p:column>
+            </p:dataTable>
+        </h:form>
+        
         <header>
             <div class="contenedor"> 
-                <h1 class="icon-bank"> Banco de iniciativas de proyectos</h1>
+                <h1 class="icon-bank"> Iniciativas </h1>
                 <input type="checkbox" id="menu-bar"></input>
                 <label class="icon-menu" for="menu-bar"></label> 
                 <nav class="menu">
+                    <a href="Inicio.xhtml">Inicio</a>
                     <a href="inicioSesion.xhtml">Iniciar Sesion</a>
                     <a href="Registro.xhtml">Registrarse</a>
-                    <a href="VerIniciativas.xhtml">Iniciativas</a>
                     <a href="">Contacto</a>
                 </nav>
             </div>
