--- a/src/main/webapp/homeAdmi.xhtml
+++ b/src/main/webapp/homeAdmi.xhtml
@@ -18,21 +18,18 @@
           
             <header>
                 <div class="contenedor"> 
-                    <h1 class="icon-bank">banco de iniciativas de proyectos</h1>
+                    <h1 class="icon-bank"> Banco de iniciativas de proyectos</h1>
                     <input type="checkbox" id="menu-bar"></input>
                     <label class="icon-menu" for="menu-bar"></label> 
                     <nav class="menu">
-                        <a href="">Inicio</a>
-                        <a href="">Iniciativas</a>
-                        <a href="">Contacto</a>
-                        <a href="">#{inicioBean.usuario.nombre} (#{inicioBean.usuario.rol})</a>
+                        <a href="homeAdmi.xhtml">#{inicioBean.usuario.nombre} (#{inicioBean.usuario.rol})</a>
                     </nav>
                 </div>
             </header>
         <div class="menuOpciones">
                     <nav class="menu2">
                          <a href="consultarUsuarios.xhtml">Consultar Usuarios del sistema</a>
-                         <a href="">Consultar Iniciativas</a>
+                         <a href="ConsultarIniciativas.xhtml">Consultar Iniciativas</a>
                          <a href="Inicio.xhtml">Cerrar Sesion</a>
                          
                     </nav>
