--- a/src/main/webapp/RegistrarIniciativa.xhtml
+++ b/src/main/webapp/RegistrarIniciativa.xhtml
@@ -40,7 +40,7 @@
                 <br><p:inputText id="Area" placeholder="&#128386; Area" value="#{proponenteBean.area}" > </p:inputText></br>
                 <br><p:inputTextarea rows="10" cols="40" id="Descripcion" placeholder="&#128100; Descripcion" value="#{proponenteBean.descripcion}"> </p:inputTextarea></br>
                 <div id="Botones">
-                    <p:commandButton value="Registrar Iniciativa" actionListener="#{proponenteBean.registrarIniciativa(proponenteBean.descripcion, proponenteBean.titulo, proponenteBean.area)}" />
+                    <p:commandButton value="Registrar Iniciativa" actionListener="#{proponenteBean.registrarIniciativa(proponenteBean.descripcion, proponenteBean.palabrasClave, proponenteBean.area)}" />
                 </div>
                 
                  
