--- a/src/main/webapp/perfilUsuario.xhtml
+++ b/src/main/webapp/perfilUsuario.xhtml
@@ -12,29 +12,39 @@
                  <link rel="stylesheet" href="Recursos/menuSecundario.css" />
 	</h:head>
 	<h:body >
+            <f:metadata>
+                <f:viewParam name="email" value="#{registroBean.email}" />
+            </f:metadata>
             <h:form id="UsuariosForm">
-              <p:dataTable id="usuarios_tabla" var="usuario" value="#{administradorBean.usuarios}">
-                <p:column headerText="Nombre">
+              <p:dataTable id="usuarios_tabla" var="usuario" value="#{registroBean.consultarUsuario()}">
+                 <p:column headerText="Nombre">
                             <h:outputText value="#{usuario.nombre}" />
                 </p:column>
+              <!-- <p:column headerText="Estado">
+                   <p:cellEditor>
+                       <f:facet name="output">  
+                            <h:outputText value="#{administradorBean.estado}" />  
+                        </f:facet> 
+                       <f:facet name="input">
+                            <h:selectOneMenu id="res" value = "#{administradorBean.estado}" > 
+                                <f:selectItems value="#{administradorBean.tipoEstado}" />
+                            </h:selectOneMenu> 
+                        </f:facet>
+                   </p:cellEditor>
+                </p:column> --> 
                 <p:column headerText="Email">
-                            <h:outputText value="#{usuario.email}" />
-                </p:column>
-                <p:column headerText="Rol">
-                            <h:outputText value="#{usuario.rol}" />
-                </p:column>
-                <p:column headerText="Iniciativas">
-                            <h:outputText value="#{usuario.iniciativas.size()}" />
-                </p:column>
-                <p:column headerText="Usuario">
-                    <p:button outcome="perfilUsuario?email=#{usuario.email}" value="Modificar usuario"/>
+                    <h:outputText value="#{usuario.email}" />
                 </p:column>
             </p:dataTable>
+                <h:selectOneMenu id="rol" value = "#{registroBean.rol}" > 
+                    <f:selectItems value="#{registroBean.tipoRol}" />
+                </h:selectOneMenu> 
+                <p:commandButton value="Actualizar" actionListener="#{registroBean.cambiarRol()}" action="consultarUsuarios.xhtml" />
             </h:form>
 
             <header>
                 <div class="contenedor"> 
-                    <h1 class="icon-bank">Usuarios</h1>
+                    <h1 class="icon-bank">Iniciativa</h1>
                     <input type="checkbox" id="menu-bar"></input>
                     <label class="icon-menu" for="menu-bar"></label> 
                     <nav class="menu">
@@ -45,6 +55,7 @@
 
             <div class="menuOpciones">
                     <nav class="menu2">
+                         <a href="consultarUsuarios.xhtml">Consultar Usuarios del sistema</a>
                          <a href="ConsultarIniciativas.xhtml">Consultar Iniciativas</a>
                          <a href="Inicio.xhtml">Cerrar Sesion</a>
                     </nav>
