--- a/src/main/webapp/Inicio.xhtml
+++ b/src/main/webapp/Inicio.xhtml
@@ -25,7 +25,9 @@
                     <a href="Registro.xhtml">Registrarse</a>
                     <a href="VerIniciativas.xhtml">Iniciativas</a>
                     <a href="">Contacto</a>
-                </nav>
+                    <a href="buscarIniciativa.xhtml">Buscar iniciativas</a>
+    
+                    </nav>
             </div>
         </header>
     </h:body>
