--- a/src/main/webapp/inicioSesion.xhtml
+++ b/src/main/webapp/inicioSesion.xhtml
@@ -40,6 +40,7 @@
                     <a href="Inicio.xhtml">Inicio</a>
                     <a href="Registro.xhtml" >Registrarse</a>
                     <a href="VerIniciativas.xhtml">Iniciativas</a>
+                    <a href="buscarIniciativa.xhtml">Buscar iniciativas</a>
                     <a href="">Contacto</a>
                     
                 </nav>
