--- a/src/main/webapp/VerIniciativas.xhtml
+++ b/src/main/webapp/VerIniciativas.xhtml
@@ -9,7 +9,7 @@
         <title>Inicio</title>
 		<link rel="stylesheet" href="fontello.css" />
                 <link rel="stylesheet" href="Recursos/estilosP.css" />
-                <link rel="stylesheet" href="Recursos/login.css" />
+                <link rel="stylesheet" href="Recursos/verIniciativa.css" />
     </h:head>
     <h:body style="overflow-x:hidden; overflow-y:hidden">
         <div id="imagenU">
@@ -41,6 +41,7 @@
                     <a href="Inicio.xhtml">Inicio</a>
                     <a href="inicioSesion.xhtml">Iniciar Sesion</a>
                     <a href="Registro.xhtml">Registrarse</a>
+                    <a href="buscarIniciativa.xhtml">Buscar iniciativas</a>
                     <a href="">Contacto</a>
                 </nav>
             </div>
